--- a/Product Pagina 1.html
+++ b/Product Pagina 1.html
@@ -24,7 +24,7 @@
     <main class="productenoverzicht2">
 
         <section class="productinzicht">
-            <img class="topImage" src="img/Games/DarkSouls.jpg" alt="">
+            <img class="topImage" src="img/DarkSouls.jpg" alt="">
             <figure>
                 <h2>Dark Souls Remastered</h2>
                 <p>
