--- a/Product Pagina 2.html
+++ b/Product Pagina 2.html
@@ -24,7 +24,7 @@
     <main class="productenoverzicht2">
 
         <section class="productinzicht">
-            <img class="topImage" src="img/Games/Skyrim.jpg" alt="">
+            <img class="topImage" src="img/Skyrim.jpg" alt="">
             <figure>
                 <h2>Skyrim</h2>
                 <p>
