--- a/Product Pagina 3.html
+++ b/Product Pagina 3.html
@@ -24,7 +24,7 @@
     <main class="productenoverzicht2">
 
         <section class="productinzicht">
-            <img class="topImage" src="img/Games/R6S.jpg" alt="">
+            <img class="topImage" src="img/R6S.jpg" alt="">
             <figure>
                 <h2>Rainbow Six Siege</h2>
                 <p>
