--- a/Product Pagina 5.html
+++ b/Product Pagina 5.html
@@ -24,7 +24,7 @@
     <main class="productenoverzicht2">
 
         <section class="productinzicht">
-            <img class="topImage" src="img/Games/sekiro.jpg" alt="">
+            <img class="topImage" src="img/sekiro.jpg" alt="">
             <figure>
                 <h2>Sekiro: Shadows Die Twice</h2>
                 <p>
