--- a/Producten Overzicht.html
+++ b/Producten Overzicht.html
@@ -56,7 +56,7 @@
         <ul class="games">
             <li class="game" data-category="soulslike" data-pricerange="price-15">
                 <a class="game-info1" href="Product Pagina 1.html">
-                <img src="/img/Games/DarkSouls.jpg" alt="Dark Souls remaster cover art - PS4">
+                <img src="/img/DarkSouls.jpg" alt="Dark Souls remaster cover art - PS4">
                 <div>
                     <p>
                         Dark Souls is a 2011 action role-playing game developed by FromSoftware and published by Namco Bandai Games. 
@@ -68,7 +68,7 @@
             </li>
             <li class="game" data-category="rpg" data-pricerange="price-30">
                 <a class="game-info2" href="Product Pagina 2.html">
-                <img src="/img/Games/Skyrim.jpg" alt="Skyrim rerelease number 54 cover art - PS4">
+                <img src="/img/Skyrim.jpg" alt="Skyrim rerelease number 54 cover art - PS4">
                 <div>
                     <p>
                         The Elder Scrolls V: Skyrim is an action role-playing video game developed by Bethesda Game Studios and published by Bethesda Softworks. 
@@ -80,7 +80,7 @@
             </li>
             <li class="game" data-category="action" data-pricerange="price-15">
                 <a class="game-info3" href="Product Pagina 3.html">
-                <img src="/img/Games/R6S.jpg" alt="Rainbow 6 siege cover art - PS4">
+                <img src="/img/R6S.jpg" alt="Rainbow 6 siege cover art - PS4">
                 <div>
                     <p>
                         Tom Clancy's Rainbow Six Siege is an online tactical shooter video game developed by Ubisoft Montreal and published by Ubisoft. 
@@ -92,7 +92,7 @@
             </li>
             <li class="game" data-category="action" data-pricerange="price-60">
                 <a class="game-info4" href="Product Pagina 4.html">
-                <img src="/img/Games/AcMirage.jpg" alt="Assassin's Creed mirage cover art - PS5">
+                <img src="/img/AcMirage.jpg" alt="Assassin's Creed mirage cover art - PS5">
                 <div>
                     <p>
                         Assassin's Creed Mirage is an upcoming action-adventure game developed by Ubisoft Bordeaux and published by Ubisoft. 
@@ -104,7 +104,7 @@
             </li>
             <li class="game" data-category="soulslike" data-pricerange="price-30">
                 <a class="game-info5" href="Product Pagina 5.html">
-                <img src="/img/Games/sekiro.jpg" alt="sekiro cover art - PS4">
+                <img src="/img/sekiro.jpg" alt="sekiro cover art - PS4">
                 <div>
                     <p>
                         Sekiro: Shadows Die Twice is a 2019 action-adventure game developed by FromSoftware. It was released for PlayStation 4, 
@@ -115,7 +115,7 @@
                 </a>
             </li>
             <li class="game" data-category="rpg" data-pricerange="price-15">
-                <img src="/img/Games/thewitcher3.jpg" alt="the witcher 3 cover art - PS4">
+                <img src="/img/thewitcher3.jpg" alt="the witcher 3 cover art - PS4">
                 <div>
                     <p>
                         The Witcher 3: Wild Hunt[b] is a 2015 action role-playing game developed and published by CD Projekt. 
@@ -126,7 +126,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-15">
-                <img src="/img/Games/gta5.jpg" alt="gta5 cover art - PS4">
+                <img src="/img/gta5.jpg" alt="gta5 cover art - PS4">
                 <div>
                     <p>
                         Grand Theft Auto V is a 2013 action-adventure game developed by Rockstar North and published by Rockstar Games. 
@@ -136,7 +136,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-60">
-                <img src="/img/Games/spiderman.jpg" alt="spiderman miles morales cover art - PS5">
+                <img src="/img/spiderman.jpg" alt="spiderman miles morales cover art - PS5">
                 <div>
                     <p>
                         Marvel's Spider-Man: Miles Morales is a 2020 action-adventure video game developed by Insomniac Games and published by Sony Interactive Entertainment. 
@@ -146,7 +146,7 @@
                 </div>
             </li>
             <li class="game" data-category="soulslike" data-pricerange="price-30">
-                <img src="/img/Games/demonsouls.jpg" alt="demonsouls cover art - PS4">
+                <img src="/img/demonsouls.jpg" alt="demonsouls cover art - PS4">
                 <div>
                     <p>
                         Demon's Souls is a 2020 action role-playing game developed by Bluepoint Games and published by Sony Interactive Entertainment for the PlayStation 5. 
@@ -157,7 +157,7 @@
                 </div>
             </li>
             <li class="game" data-category="rpg" data-pricerange="price-30">
-                <img src="/img/Games/valhalla.jpg" alt="ac valhalla cover art - PS4">
+                <img src="/img/valhalla.jpg" alt="ac valhalla cover art - PS4">
                 <div>
                     <p>
                         Assassin's Creed Valhalla is a 2020 action role-playing video game developed by Ubisoft Montreal and published by Ubisoft. 
@@ -167,7 +167,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-60">
-                <img src="/img/Games/starwars.jpg" alt="starwars fallen order cover art - PS4">
+                <img src="/img/starwars.jpg" alt="starwars fallen order cover art - PS4">
                 <div>
                     <p>
                         Star Wars Jedi: Survivor is an action-adventure game developed by Respawn Entertainment and published by Electronic Arts. 
@@ -177,7 +177,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-15">
-                <img src="/img/Games/doom.jpg" alt="doom eternal cover art - PS5">
+                <img src="/img/doom.jpg" alt="doom eternal cover art - PS5">
                 <div>
                     <p>
                         Doom Eternal is a first-person shooter game developed by id Software and published by Bethesda Softworks. 
@@ -187,7 +187,7 @@
                 </div>
             </li>
             <li class="game" data-category="soulslike" data-pricerange="price-15">
-                <img src="/img/Games/nier.jpg" alt="nier automata cover art - PS4">
+                <img src="/img/nier.jpg" alt="nier automata cover art - PS4">
                 <div>
                     <p>
                         Nier: Automata[b] is a 2017 action role-playing game developed by PlatinumGames and published by Square Enix. It is a sequel to Nier (2010), 
@@ -197,7 +197,7 @@
                 </div>
             </li>
             <li class="game" data-category="rpg" data-pricerange="price-15">
-                <img src="/img/Games/origins.jpg" alt="ac origins release cover art - PS4">
+                <img src="/img/origins.jpg" alt="ac origins release cover art - PS4">
                 <div>
                     <p>
                         Assassin's Creed Origins is a 2017 action role-playing video game developed by Ubisoft Montreal and published by Ubisoft. 
@@ -207,7 +207,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-30">
-                <img src="/img/Games/fallenorder.jpg" alt="jedi fallen order cover art - PS4">
+                <img src="/img/fallenorder.jpg" alt="jedi fallen order cover art - PS4">
                 <div>
                     <p>
                         Star Wars Jedi: Fallen Order is a 2019 action-adventure game developed by Respawn Entertainment and published by Electronic Arts. 
@@ -217,7 +217,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-30">
-                <img src="/img/Games/sifu.jpg" alt="sifu cover art - PS5">
+                <img src="/img/sifu.jpg" alt="sifu cover art - PS5">
                 <div>
                     <p>
                         Sifu is a beat 'em up video game developed and published by French studio Sloclap. Set in modern-day China, 
@@ -227,7 +227,7 @@
                 </div>
             </li>
             <li class="game" data-category="soulslike" data-pricerange="price-15">
-                <img src="/img/Games/bloodborne.jpg" alt="bloodborne cover art - PS4">
+                <img src="/img/bloodborne.jpg" alt="bloodborne cover art - PS4">
                 <div>
                     <p>
                         Bloodborne[b] is a 2015 action role-playing game developed by FromSoftware and published by Sony Computer Entertainment for the PlayStation 4. 
@@ -237,7 +237,7 @@
                 </div>
             </li>
             <li class="game" data-category="rpg" data-pricerange="price-30">
-                <img src="/img/Games/eldenring.jpg" alt="eldenring cover art - PS4">
+                <img src="/img/eldenring.jpg" alt="eldenring cover art - PS4">
                 <div>
                     <p>
                         Elden Ring[a] is a 2022 action role-playing game developed by FromSoftware. 
@@ -248,7 +248,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-60">
-                <img src="/img/Games/rdr2.jpg" alt="rdr2 cover art - PS4">
+                <img src="/img/rdr2.jpg" alt="rdr2 cover art - PS4">
                 <div>
                     <p>
                         Red Dead Redemption 2[a] is a 2018 action-adventure game developed and published by Rockstar Games. 
@@ -259,7 +259,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-60">
-                <img src="/img/Games/re4.jpg" alt="Assassin's Creed cover art - PS5">
+                <img src="/img/re4.jpg" alt="Assassin's Creed cover art - PS5">
                 <div>
                     <p>
                         Resident Evil 4[a] is a 2023 survival horror game developed and published by Capcom. 
@@ -270,7 +270,7 @@
                 </div>
             </li>
             <li class="game" data-category="soulslike" data-pricerange="price-15">
-                <img src="/img/Games/greedfall.jpg" alt="Dark Souls remaster cover art - PS4">
+                <img src="/img/greedfall.jpg" alt="Dark Souls remaster cover art - PS4">
                 <div>
                     <p>
                         GreedFall is an action role-playing game developed by Spiders and published by Focus Home Interactive. 
@@ -281,7 +281,7 @@
                 </div>
             </li>
             <li class="game" data-category="rpg" data-pricerange="price-15">
-                <img src="/img/Games/cyberpunk.jpg" alt="Skyrim rerelease number 54 cover art - PS4">
+                <img src="/img/cyberpunk.jpg" alt="Skyrim rerelease number 54 cover art - PS4">
                 <div>
                     <p>
                         Cyberpunk 2077 is a 2020 action role-playing video game developed by CD Projekt Red and published by CD Projekt. 
@@ -291,7 +291,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-15">
-                <img src="/img/Games/dyinglight.jpg" alt="Rainbow 6 siege cover art - PS4">
+                <img src="/img/dyinglight.jpg" alt="Rainbow 6 siege cover art - PS4">
                 <div>
                     <p>
                         Dying Light is a 2015 survival horror video game developed by Techland and published by Warner Bros. Interactive Entertainment. 
@@ -301,7 +301,7 @@
                 </div>
             </li>
             <li class="game" data-category="action" data-pricerange="price-60">
-                <img src="/img/Games/lastofus.jpg" alt="Assassin's Creed cover art - PS5">
+                <img src="/img/lastofus.jpg" alt="Assassin's Creed cover art - PS5">
                 <div>
                     <p>
                         The Last of Us is a 2013 action-adventure game developed by Naughty Dog and published by Sony Computer Entertainment. 
