--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section class="sections section2">
             <div class="top">
-                <img class="topImage" src="img/Games/AcMirage.jpg" alt="">
+                <img class="topImage" src="img/AcMirage.jpg" alt="">
                 <figure class="text">
                     <h2>Check This Out!</h2>
                     <p>
@@ -44,10 +44,10 @@
                 </figure>
             </div>
             <div class="bottom">
-                <img class="bottomImages" src="img/Games/DarkSouls.jpg" alt="">
-                <img class="bottomImages" src="img/Games/R6S.jpg" alt="">
-                <img class="bottomImages" src="img/Games/Skyrim.jpg" alt="">
-                <img class="bottomImages" src="img/Games/gta5.jpg" alt="">
+                <img class="bottomImages" src="img/DarkSouls.jpg" alt="">
+                <img class="bottomImages" src="img/R6S.jpg" alt="">
+                <img class="bottomImages" src="img/Skyrim.jpg" alt="">
+                <img class="bottomImages" src="img/gta5.jpg" alt="">
             </div>
         </section>
 
@@ -92,7 +92,7 @@
                     As one of the last surviving Jedi Knights, Cal is driven to make a stand during the galaxy's darkest times.
                 </p>
             </figure>
-            <img src="img/Games/starwars.jpg" alt="">
+            <img src="img/starwars.jpg" alt="">
         </section>
 
         <section class="sections section5">
