--- a/Product Pagina 4.html
+++ b/Product Pagina 4.html
@@ -24,7 +24,7 @@
     <main class="productenoverzicht2">
 
         <section class="productinzicht">
-            <img class="topImage" src="img/Games/AcMirage.jpg" alt="">
+            <img class="topImage" src="img/AcMirage.jpg" alt="">
             <figure>
                 <h2>Assassin's Creed Mirage</h2>
                 <p>
